# netcam_stream

./: CMakeLists.txt  README.md  all_netcams.launch  homography.launch  netcam.launch  package.xml
calibration/: cam101.yaml  cam103.yaml  cam105.yaml  cam110.yaml  cam114.yaml  cam118.yaml  cam119.yaml  cam124.yaml  cam131.yaml  cam132.yaml  cam133.yaml  cam135.yaml  cam136.yaml  cam137.yaml  cam139.yaml  cam140.yaml  cam141.yaml  cam142.yaml  cam143.yaml  cam148.yaml  cam150.yaml  cam151.yaml  cam152.yaml  cam154.yaml  cam157.yaml  cam161.yaml  cam162.yaml  homography118.yaml
extrinsic_pose/: pose_135.yaml  pose_137.yaml  pose_139.yaml
launch/: all_netcams.launch  extrinsic_calibration.launch  homography.launch  netcam.launch
src/: calibration_master.cpp  camera_node.cpp  homography.cpp  main.cpp  precomp.hpp
srv/: ChessPose.srv  SetPose.srv
