<?xml version="1.0"?>
<package>
  <name>netcam_stream</name>
  <version>1.0.0</version>
  <description>The netcam_stream package. 
	Streams network cameras to ROS type images.
  </description>

  <maintainer email="d.angelov@sms.ed.ac.uk">
    Daniel Angelov
  </maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>

</package>
